changed revision in master-app.yaml

--- a/gitops/master-app.yaml
+++ b/gitops/master-app.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: root-app
+  name: master-app
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/S-McCauley/homebase.git
-    targetRevision: HEAD
+    targetRevision: master
     path: charts   
   destination:
     server: https://kubernetes.default.svc
