All the corrections

--- a/gitops/charts/grafana-app.yaml
+++ b/gitops/charts/grafana-app.yaml
@@ -33,4 +33,5 @@ spec:
     automated:
       prune: true
       selfHeal: true
-    createNamespace: true
+    syncOptions:
+      - CreateNamespace=true
