--- a/gitops/master-app.yaml
+++ b/gitops/master-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/S-McCauley/homebase.git
     targetRevision: master
-    path: charts   
+    path: gitops/charts   
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
