--- a/gitops/charts/adguard-app.yaml
+++ b/gitops/charts/adguard-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://bjw-s.github.io/helm-charts
+    repoURL: ghcr.io/bjw-s/helm-charts
     chart: adguard-home
     targetRevision: 1.5.1
     helm:
